infrastructure/controllers/traefik/middleware-dashboard-redirect.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect
  namespace: traefik
spec:
  redirectRegex:
    regex: "^https://traefik\\.xrs444\\.net/$"
    replacement: "https://traefik.xrs444.net/oauth2/start?rd=/dashboard/"
    permanent: false
