infrastructure/controllers/traefik/namespace-traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
      pod-security.kubernetes.io/enforce: privileged
      pod-security.kubernetes.io/enforce-version: latest
