infrastructure/controllers/traefik/service-traefik-metrics-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics-nodeport
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: metrics
spec:
  type: NodePort
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
      nodePort: 30090
      protocol: TCP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
