infrastructure/controllers/traefik/ingressroute-oauth2-proxy.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.xrs444.net`) && PathPrefix(`/oauth2/`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 4180
  tls:
    certResolver: yourresolver # <-- replace with your cert resolver if needed
